collapse.css
.wrapper_fea3ef.guilds_a4d4d9, .sidebar_a4d4d9{
    position: absolute;
    opacity: 0.05%;
    z-index: 5 !important;
    transition-duration: var(--transition-time);
}

/* Sidebars */
.wrapper_fea3ef.guilds_a4d4d9{
    height: 70%;
    margin-top: 6%;
    z-index: 5;
    right: var(--server-position);
    width: 72px;
    visibility: none;
}

.sidebar_a4d4d9{
    height: 70%;
    margin-top: 7%;
    right: var(--channel-position);
    width: 90px;
}

/* Hover */

.wrapper_fea3ef.guilds_a4d4d9:hover, .sidebar_a4d4d9:hover{
    height: 100%;
}

.wrapper_fea3ef.guilds_a4d4d9:hover{
    width: 72px;
    opacity: 100% !important;
    margin-top: 48.1px;
}

.sidebar_a4d4d9:hover{
    margin-top: 0%;
    opacity: 100%;
    width: 250px;
}

/* Buttons */

.buttons__7ecff{
    transition-duration: var(--transition-time-long);
    max-width: max-content;
}

.buttons__7ecff:not(:hover){
    width: 40px;
}

.buttons__7ecff:hover{
    width: 900px;
}

/* Compatability */

.buttonContainer__6de7e{
    right: 8%;
}

.contentWrapper_e0bb2c, .form_d8a4a1:hover{
    z-index: 15 !important;
}

.topControls_e834ab.controlSection_b43ab2, .bottomControls__72d8d.controlSection_b43ab2{
    visibility: visible;
    z-index: 15 !important;
}
[href^="https://kota"], [href^="https://slop"], [href^="https://koyo"]{
    background: linear-gradient(270deg,#1e5799,#2ce0bf,#76dd2c,#dba62b,#ff1493,#1e5799);
    animation: rainbow 64s linear infinite;
    color: transparent !important;
    -webkit-background-clip: text;
}

@keyframes rainbow{
    0% {
        background-position-x: 0;
    }
    100% {
        background-position-x: 10240px;
    }
}

[aria-label="🎐"]{
    content: url("https://bigrat.monster/media/bigrat.jpg");
    scale: 5;
    left: 500px;
    top: -80px;
    position: absolute;
    z-index: 39;
}

.header_f9f2ca, .messageListItem_d5deea, .messageListItem_d5deea *{
    overflow: visible !important;
}

div.contents_f9f2ca > img{
    overflow: hidden !important;
}

[src^="https://cdn.discordapp.com/avatars/216347346999443456/"]+h3::before{
    content: url("https://dakota.nekoweb.org/d1.png");
    left: 180px;
    top: -12px;
    z-index: 35;
    display: inline-block;
    position: absolute;
}

[src^="https://cdn.discordapp.com/avatars/362050318512685057/"]+h3::before {
    content: url("https://dakota.nekoweb.org/crown.png");
    left: -223px;
    top: -197px;
    rotate: 35deg;
    z-index: 35;
    scale: .08;
    filter: invert(81%) sepia(17%) saturate(1315%) hue-rotate(337deg) brightness(103%) contrast(93%) drop-shadow(0px 10px 14px #000000);
    display: inline-block;
    position: absolute;
}

